testdata/baselines/reference/submodule/conformance/jsDeclarationsImportTypeBundled.errors.txt
folder/mod1.js(8,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
index.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== folder/mod1.js (1 errors) ====
    /**
     * @typedef {{x: number}} Item
     */
    /**
     * @type {Item};
     */
    const x = {x: 12};
    module.exports = x;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
==== index.js (1 errors) ====
    /** @type {(typeof import("./folder/mod1"))[]} */
    const items = [{x: 12}];
    module.exports = items;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.